# smart_watch

./: Cargo.toml  Makefile  README.md  sdkconfig  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust.yml
3D shell/: Up.stl
images/: tv.raw
src/: main.rs  profile.rs  target.rs
src/bilibili/: entry.rs  mod.rs
src/cat_play/: mod.rs
src/distance/: mod.rs
src/epd1in54_v2/: mod.rs
src/github/: mod.rs  user.rs
src/load/: app.rs  mod.rs
src/time/: mod.rs
src/type_a/: command.rs  constants.rs
src/weather/: mod.rs
